1 file modified, 1 deleted

--- a/index.html
+++ b/index.html
@@ -23,13 +23,29 @@
         padding: 15px;
         margin: 15px;
       }
+      p {
+        background: red;
+      }
+      .paragraph_2 {
+        background: blue;
+      }
+      #paragraph_3 {
+        background: green;
+      }
+      p:nth-child(2) {
+        backround: pink;
+      }
     </style>
   </head>
   <body>
     <div class="parent">
       <nav>hello</nav>
       <div class="child">
-        World
+        <p>this has been selected by CSS using the p tag name</p>
+        <p class="paragraph_2">
+          this has been selected using a <strong>class</strong> selector
+        </p>
+        <p id="paragraph_3">this paragraph has been selected using</p>
         <div class="box">box</div>
       </div>
     </div>
