--- a/spacing.html
+++ b/spacing.html
@@ -61,7 +61,7 @@
         <p class="block-div" id="spacing-lesson">
           This is a block level element
         </p>
-        <p class="block-div" id="spacing-lesson">
+        <p class="block-div round" id="spacing-lesson">
           This is a block level element
         </p>
       </div>
