--- a/javascript.html
+++ b/javascript.html
@@ -5,88 +5,16 @@
   <body>
     <div class="parent">
       <nav>
-        <ul>
-          <li>
-            <a href="index.html">
-              <!-- <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="16"
-                height="16"
-                fill="currentColor"
-                class="bi bi-house"
-                viewBox="0 0 16 16"
-              >
-                <path
-                  d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.707 1.5ZM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5 5 5Z"
-                />
-              </svg> -->
-              CSS Selectors</a
-            >
-          </li>
-          <li>
-            <a href="page2.html">
-              <!-- <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="16"
-                height="16"
-                fill="currentColor"
-                class="bi bi-bell"
-                viewBox="0 0 16 16"
-              >
-                <path
-                  d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2zM8 1.918l-.797.161A4.002 4.002 0 0 0 4 6c0 .628-.134 2.197-.459 3.742-.16.767-.376 1.566-.663 2.258h10.244c-.287-.692-.502-1.49-.663-2.258C12.134 8.197 12 6.628 12 6a4.002 4.002 0 0 0-3.203-3.92L8 1.917zM14.22 12c.223.447.481.801.78 1H1c.299-.199.557-.553.78-1C2.68 10.2 3 6.88 3 6c0-2.42 1.72-4.44 4.005-4.901a1 1 0 1 1 1.99 0A5.002 5.002 0 0 1 13 6c0 .88.32 4.2 1.22 6z"
-                /></svg
-              > -->
-              Block + In-line</a
-            >
-          </li>
-          <li>
-            <a href="spacing.html">
-              <!-- <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="16"
-                height="16"
-                fill="currentColor"
-                class="bi bi-chat-square-heart-fill"
-                viewBox="0 0 16 16"
-              >
-                <path
-                  d="M2 0a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2h2.5a1 1 0 0 1 .8.4l1.9 2.533a1 1 0 0 0 1.6 0l1.9-2.533a1 1 0 0 1 .8-.4H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2Zm6 3.993c1.664-1.711 5.825 1.283 0 5.132-5.825-3.85-1.664-6.843 0-5.132Z"
-                /></svg
-              > -->
-              Spacing</a
-            >
-          </li>
-          <li><a href="javascript.html">Javascript</a></li>
-        </ul>
+        <ul></ul>
       </nav>
       <div class="child">
-        <h1>This is Javascript</h1>
-
-        <p>
-          onclick, functions, the Element object, and the innerHTML Property
-        </p>
-
-        <!-- <p id="demo">Click the button to delete my inner HTML content.</p> -->
-
-        <button onclick="myFunction()">Click Me</button>
+        <h1>Javascript</h1>
+        <button onclick="doSomethingCool()">Click Me</button>
 
         <script>
-          function myFunction() {
+          function doSomethingCool() {
             alert('WARNING!');
-            //document.getElementById('demo').innerHTML = 'Hello World';
           }
-
-          // Printing a variable value
-          var x = 10;
-          var y = 20;
-          var sum = x + y;
-          // document.write(sum); // Prints: 30
-
-          // var div = document.querySelector('.child');
-          // var p = document.createElement('p');
-          // p.textContent = 'I was appended to the div';
-          // div.appendChild(p);
         </script>
       </div>
     </div>
