1 file modified, 1 added

--- a/javascript.html
+++ b/javascript.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="style.css" />
+    <script src="scripts.js"></script>
   </head>
   <body>
     <div class="parent">
@@ -78,11 +79,7 @@
         <h1>Javascript</h1>
         <button onclick="doSomethingCool()">Click Me</button>
 
-        <script>
-          function doSomethingCool() {
-            alert('WARNING!');
-          }
-        </script>
+        <script></script>
       </div>
     </div>
   </body>
