--- a/javascript.html
+++ b/javascript.html
@@ -77,9 +77,11 @@
       </nav>
       <div class="child">
         <h1>Javascript</h1>
-        <button onclick="doSomethingCool()">Click Me</button>
 
-        <script></script>
+        <label for="name">Your First Name</label>
+        <input type="text" id="name" />
+
+        <button onclick="doSomethingCool()">Click Me</button>
       </div>
     </div>
   </body>
