--- a/javascript.html
+++ b/javascript.html
@@ -78,8 +78,17 @@
       <div class="child">
         <h1>Javascript</h1>
 
-        <label for="name">Your First Name</label>
-        <input type="text" id="name" />
+        <label for="adj">An adjective</label>
+        <input type="text" id="adj" />
+        <br /><br />
+
+        <label for="noun">A noun</label>
+        <input type="text" id="noun" />
+        <br /><br />
+
+        <label for="noun2">A noun</label>
+        <input type="text" id="noun2" />
+        <br /><br />
 
         <button onclick="doSomethingCool()">Click Me</button>
       </div>
